<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/android_rating_bar_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_ratingbar_example"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:rating="0" />

    <Button
        android:id="@+id/ratingSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="rateSubmit"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/ratingDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_rate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
